# cognitive-tutor

./: README.md  app.py  config.py  pyproject.toml  run.py  users.json
app/: __init__.py  db.py  models.py
app/routes/: __init__  auth.py  lessons.py
