[tool.poetry]
name = "cognitive-tutor-backend"
version = "0.1.0"
description = "backend of cog tutor i guess"
authors = ["Maya Ashley-Martin <mj.ashleymartin@gmail.com>"]
readme = "README.md"
packages = []
package-mode = false 

[tool.poetry.dependencies] 
python = ">=3.10,<4.0"
flask = ">=3.1.0,<4.0.0"
flask-sqlalchemy = ">=3.1.1,<4.0.0"
flask-jwt-extended = ">=4.7.1,<5.0.0"
flask-cors = ">=5.0.1,<6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
